fixed image location for add button

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,7 +7,7 @@
 		height: 2em;
 		width: 2em;
 		margin: 0.5em 0 0.5em 2em;
-		background: no-repeat center/100% url("/images/ios7-plus-empty.png");
+		background: no-repeat center/100% url("./images/ios7-plus-empty.png");
 		background-color: #B6B6B6;
 		border-radius: 100%;
 	}
